// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled control with tooltip 1`] = `
<EuiFormRow
  data-test-subj="inputControl0"
  fullWidth={false}
  hasEmptyLabelSpace={false}
  id="controlId"
  label="test control"
>
  <EuiToolTip
    content="I am disabled for testing purposes"
    placement="top"
    position="top"
  >
    <div>
      My Control
    </div>
  </EuiToolTip>
</EuiFormRow>
`;

exports[`renders enabled control 1`] = `
<EuiFormRow
  data-test-subj="inputControl0"
  fullWidth={false}
  hasEmptyLabelSpace={false}
  id="controlId"
  label="test control"
>
  <div>
    My Control
  </div>
</EuiFormRow>
`;

exports[`renders warning with tooltip 1`] = `
<EuiFormRow
  data-test-subj="inputControl0"
  fullWidth={false}
  hasEmptyLabelSpace={false}
  id="controlId"
  label={
    <UNDEFINED>
      test control 
      <EuiIconTip
        aria-label="Warning"
        content="I am showing a warning for testing purposes"
        position="right"
        type="alert"
      />
    </UNDEFINED>
  }
>
  <div>
    My Control
  </div>
</EuiFormRow>
`;
